--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Wireframe</title>
 
-	<link rel="stylesheet" type="text/css" href="wireframe.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
